--- a/src/App/App.css
+++ b/src/App/App.css
@@ -30,3 +30,11 @@
     transform: rotate(360deg);
   }
 }
+
+.main-body {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
