--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -4,7 +4,7 @@
 
 .Header-header {
   background-color: #4c525a;
-  height: 6%;
+  height: 6vh;
   padding: 20px;
   color: white;
   display: flex;
