add date column

--- a/src/TimeColumn/TimeColumn.scss
+++ b/src/TimeColumn/TimeColumn.scss
@@ -1,6 +1,6 @@
-.column-container {
+.time-column-container {
   height: 88vh;
-  width: 29%;
+  width: 13%;
   text-align: center;
   display: flex;
   flex-direction: column;
