start seeds for appointments

--- a/src/Column/Column.scss
+++ b/src/Column/Column.scss
@@ -7,4 +7,12 @@
   justify-content: flex-start;
   align-items: center;
   border-right: 1px solid grey;
+
+  .Jimmy,
+  .Bernice,
+  .Walk-in {
+    border-bottom: 1px solid grey;
+    width: 100%;
+    padding: 10px;
+  }
 }
