--- a/src/Appointment/Appointment.scss
+++ b/src/Appointment/Appointment.scss
@@ -1,12 +1,16 @@
 .appointment-container {
   width: 100%;
-  height: 166px;
+  height: 116px;
   border-bottom: 1px grey solid;
   display: flex;
   justify-content: center;
   align-items: center;
   .appointment {
     padding: 8px;
-    background: green;
+    width: 100%;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
