--- a/src/Appointment/Appointment.scss
+++ b/src/Appointment/Appointment.scss
@@ -6,11 +6,22 @@
   justify-content: center;
   align-items: center;
   .appointment {
-    padding: 8px;
     width: 100%;
-    font-size: 18px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-left: 5px;
+    .name,
+    .phone,
+    .subject,
+    .note {
+      width: 100%;
+      display: flex;
+      font-size: 20px;
+      margin: 2px;
+      .desc {
+        padding-left: 5px;
+      }
+    }
   }
 }
