--- a/src/Column/Column.scss
+++ b/src/Column/Column.scss
@@ -1,5 +1,4 @@
 .column-container {
-  height: 88vh;
   width: 29%;
   text-align: center;
   display: flex;
@@ -14,5 +13,6 @@
     border-bottom: 1px solid grey;
     width: 100%;
     padding: 10px;
+    font-size: 24px;
   }
 }
