--- a/src/TimeColumn/TimeColumn.scss
+++ b/src/TimeColumn/TimeColumn.scss
@@ -1,5 +1,4 @@
 .time-column-container {
-  height: 88vh;
   width: 13%;
   text-align: center;
   display: flex;
@@ -11,5 +10,6 @@
     border-bottom: 1px solid grey;
     width: 91%;
     padding: 10px;
+    font-size: 24px;
   }
 }
