--- a/src/TimeList/TimeList.scss
+++ b/src/TimeList/TimeList.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     border-bottom: 1px grey solid;
+    font-size: 24px;
     padding: 8px;
   }
 }
