--- a/src/Appointment/Appointment.scss
+++ b/src/Appointment/Appointment.scss
@@ -5,23 +5,46 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  .modal {
+    z-index: 10;
+  }
+
   .appointment {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding-left: 5px;
+
     .name,
     .phone,
     .subject,
-    .note {
+    .note,
+    .time {
       width: 100%;
       display: flex;
-      font-size: 20px;
+      font-size: 16px;
       margin: 2px;
       .desc {
         padding-left: 5px;
       }
+    }
+  }
+  .modal-container {
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+    position: fixed;
+    background-color: black;
+
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    .modal-content {
+      color: green;
     }
   }
 }
