--- a/src/Appointment/Appointment.scss
+++ b/src/Appointment/Appointment.scss
@@ -5,9 +5,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  .modal {
-    z-index: 10;
-  }
 
   .appointment {
     width: 100%;
@@ -45,6 +42,12 @@
     background-color: rgba(0, 0, 0, 0.4);
     .modal-content {
       color: green;
+      background-color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 500px;
+      width: 500px;
     }
   }
 }
