--- a/src/AppEdit/AppEdit.scss
+++ b/src/AppEdit/AppEdit.scss
@@ -12,15 +12,42 @@
     align-items: center;
     height: 100%;
     width: 100%;
+    .edit-app-button {
+      width: 500px;
+      display: flex;
+      justify-content: center;
+      .button {
+        background: #fff;
+        color: mix(black, mix(white, #424242, 70%), 25%);
+        border: none;
+        padding: 12px 24px;
+        border-radius: 3px;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        text-decoration: none;
+        outline: none;
+        font-size: 22px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+        background: #2196f3;
+        color: mix(white, #2196f3, 70%);
+        &:hover {
+          background: darken(#2196f3, 5%);
+          color: mix(white, #2196f3, 85%);
+        }
+      }
+    }
     .input {
       font-size: 22px;
-      input {
+
+      input,
+      #note {
         background: none;
 
         font-size: 18px;
         padding: 10px 10px 10px 5px;
         display: block;
-        width: 70%;
+        width: 100%;
         border: none;
         border-radius: 0;
         border-bottom: 1px solid black;
