--- a/src/Appointment/Appointment.scss
+++ b/src/Appointment/Appointment.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding-left: 5px;
-
+    height: 100%;
     .name,
     .phone,
     .subject,
@@ -21,10 +21,16 @@
       width: 100%;
       display: flex;
       font-size: 16px;
-      margin: 2px;
+      margin-top: 10px;
+      overflow-y: scroll;
+      font-weight: 600;
       .desc {
         padding-left: 5px;
+        font-weight: 400;
       }
+    }
+    .name {
+      margin-top: 5px;
     }
   }
   .modal-container {
