--- a/src/Appointment/Appointment.scss
+++ b/src/Appointment/Appointment.scss
@@ -47,6 +47,7 @@
     align-items: center;
     background-color: rgba(0, 0, 0, 0.4);
     .modal-content {
+      border-radius: 20px;
       color: green;
       background-color: white;
       display: flex;
