--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -19,15 +19,23 @@
 }
 .header-date {
   display: flex;
-
+  align-items: center;
   font-size: 30px;
   letter-spacing: 1.5px;
-  .day,
   .date {
     width: fit-content;
+    height: 100%;
+  }
+  .day {
+    width: fit-content;
+    height: 100%;
   }
   .date {
     margin-left: 10px;
+  }
+  .year {
+    height: 100%;
+    width: fit-content;
   }
 }
 
@@ -59,11 +67,15 @@
   text-align: center;
   margin-right: 10px;
 }
-@keyframes Header-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.fa {
+  color: red;
+  height: 100%;
+}
+
+.fa-arrow-right {
+  margin-left: 20px;
+}
+.fa-arrow-left {
+  margin-right: 20px;
 }
