--- a/src/Appointment/Appointment.scss
+++ b/src/Appointment/Appointment.scss
@@ -29,15 +29,12 @@
       .desc {
         padding-left: 5px;
         font-weight: 400;
+        color: blue;
       }
     }
     .name {
       margin-top: 5px;
     }
-  }
-
-  .colored-appointment {
-    background-color: rgb(172, 255, 227);
   }
 
   .modal-container {
